2016-03-09  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-455
	
	* src/m_append.h:

	Allow appending a Matrix or a Vector to an empty Matrix. Feature
	requested by Jana.

2016-03-08 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-454
	
	Added temperature and scat angle grid interpolation of phase matrix for
	Disort data prep. So far this is experimental, hence implemented as additional
	option. So far previous state remains the default.
	
	* src/disort.cc, disort.h
	
	(phase_functionCalc2, pmomCalc2):
	These methods hold the altyernative phase matrix / phase function handling. 
	phase_functionCalc2 applies scat data interpolation methods developed for DOIT
	and consistent with extinction/absorption derivation methods applied by
	dtauc_ssalbCalc, namely spt_calc_agenda, opt_prop_part_agenda, and
	pha_mat_sptFromMonoData.
	
	(dtauc_ssalbCalc):
	Remove implicit assumption of cloudbox_limits[0]==0 (not a critical issue for
	now, where we disallow lower cloudbox limit anywhere else but at lowest atm
	level. but beter to avoid future confusions...).
	
	* src/m_disort.cc (DisortCalc):
	Added T- & data_za_grid-interpolation option for phase matrix as alternative.
	Removed doit_i_field initialization, instead have it as input initialized by
	DisortInit. Extend thread-safe region (new phase matrix methods make changes
	to variables passed into disort, hence not only disort itself but also these
	modification parts need to be encapsulated.); later on try to reduce this
	region as far as possible. Moved data_za_grid identity check from DoitInit to
	here as this requirement depends on which phase matrix handling method is
	applied.
	
	* src/m_optproperties.cc
	
	(pha_mat_sptFromData):
	Bugfix. pha_mat_spt need to be flat scat elem indexed!
	
	(pha_mat_sptFromMonoData):
	Bugfix. Actually use pha_mat_data of different temperature grid points in
	transformation to lab coord system before temperature interpolation.

	* src/m_doit.cc (doit_i_fieldSetClearsky):