@@ -1,3 +1,11 @@
+2016-03-08 Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-456
+	
+	* src/m_disort.cc (DisortCalc):
+	Bugfix of phase_function container sizing (mixed up sizings for old and new
+	versions).
+
 2016-03-09  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-455
